# VollaCell

./: .gitignore  LICENSE  README.md  pubspec.yaml
.github/workflows/: build-and-release.yml
android/: key.properties.template  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
kaonic/: Cargo.toml
kaonic/src/: lib.rs
lib/: main.dart  objectbox-model.json  objectbox.g.dart  routes.dart
lib/data/extensions/: date_extension.dart  string_extension.dart
lib/data/models/: call_event_data.dart  contact_model.dart  kaonic_contact_event.dart  kaonic_contact_event.g.dart  kaonic_create_chat_event.dart  kaonic_create_chat_event.g.dart  kaonic_event.dart  kaonic_event.g.dart  kaonic_message_event.dart  kaonic_message_event.g.dart  meah_chat.dart  mesh_address.dart  mesh_call.dart  mesh_message.dart  mesh_node.dart  radio_address.dart  radio_packet.dart  settings.dart  user_keys.dart  user_model.dart
lib/data/repository/: passcode_repository.dart  storage.dart  user_repository.dart
lib/l10n/: intl_en.arb
lib/service/: call_service.dart  chat_service.dart  communication_service.dart  device_service.dart  kaonic_communication_service.dart  mesh_service.dart  user_service.dart
lib/service/new/: call_service.dart  chat_service.dart  kaonic_communication_service.dart
lib/src/: welcome_screen.dart
lib/src/call/: call_screen.dart
lib/theme/: assets.dart  text_styles.dart  theme.dart
lib/utils/: byte_converter.dart  crypto_utils.dart  dialog_util.dart  rand_utils.dart  snackbar_util.dart
test/: widget_test.dart
(+68 files in other folders)
