[package]
name = "kaonic"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

jni = "0.21.1"
reticulum = { path = "../../reticulum-rs" }
log = "0.4.26"
android_log = "0.1.3"

# Random Number generator
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Async IO
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"

[lib]
crate-type = ["staticlib", "dylib"]
